fix action and date align

--- a/src/app/recipe/components/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipe/components/recipe-detail/recipe-detail.component.scss
@@ -22,7 +22,7 @@
   margin-left: -8px;
   display: flex;
 
-  & > span {
+  & > .filler {
     flex: 1;
   }
   & p {
